# documentCreatorWeb

./: LICENSE  README.md  TODO.txt
Test/: CompareImage.cpp
client/: TOTO.txt~  create-your-document.html  degradations.html  doc-online.html  font-creator.html  footer-online.html  home-online.html  home-test-online.html  index.html  menu-online.html  online-test.html  synthetise.html  synthetise1.html  synthetize  test-online.html
client/css/: bootstrap.css  bootstrap.min.css  custom.css  full-slider.css  google_api.css  style.css  style.default.css
client/files/: README.txt
client/js/: #init.js#  Blob.js  FileSaver.js  controller.js  init.js  manipulate_canvas.js  session.js  settings.js  upload_file.js
server/: CMakeLists.txt  Makefile  config.ini
server/data/background/: bg_PR7.tif
server/data/font/: bmt.of  fraktur.of  garamont.of  geringcicero.of  merged-monta2.of  vesale.of
server/headers/: BleedThrough.hpp  BlurFilter.hpp  BlurFilter2.hpp  Config.hpp  LineDetection.hpp  LoadLetter.hpp  OCR.hpp  Painter.hpp  PhantomCharacter.hpp  ShadowBinding.hpp  StructureDetection.hpp  SynthetizeImage.hpp  convertor.h  degradation.hpp  gestionSession.hpp  manualFontExtractor.hpp  synthetizeTest.hpp  util.hpp
server/headers/degradations/: BleedThrough.hpp  BlurFilter.hpp  GrayscaleCharsDegradationModel.hpp  HoleDegradation.hpp  PhantomCharacter.hpp  ShadowBinding.hpp  degradation.hpp
server/headers/synthetize/: BackgroundReconstruction.hpp  DocumentXML.hpp  LineDetection.hpp  LoadLetter.hpp  OCR.hpp  Painter.hpp  SynthetizeImage.hpp  synthetizeTest.hpp  textinpainting.hpp
server/headers/util/: Config.hpp  baseline.hpp  binarization.hpp  convertor.h  util.hpp
server/headers/webPages/: GetSynthetizeImage.hpp  StartSession2.hpp  gestionSession.hpp
server/src/: #main.cpp#  BackgroundReconstruction.cpp  BleedThrough.cpp  BlurFilter.cpp  BlurFilter2.cpp  Character.cpp  Config.cpp  DocumentXML.cpp  GetSynthetizeImage.cpp  GrayscaleCharsDegradationModel.cpp  Image.cpp  LineDetection.cpp  LoadLetter.cpp  OCR.cpp  Painter.cpp  PhantomCharacter.cpp  Session.cpp  ShadowBinding.cpp  StartSession2.cpp  StructureDetection.cpp  SynthetizeImage.cpp  binarization.cpp  convertor.cpp  degradations.cpp  gestionSession.cpp  main.cpp  synthetizeTest.cpp  util.cpp
server/src/degradations/: BleedThrough.cpp  GrayscaleCharsDegradationModel.cpp  HoleDegradation.cpp  PhantomCharacter.cpp  ShadowBinding.cpp
server/src/manualFontExtractor/: Character.cpp  Font.cpp  Image.cpp  Line.cpp  connectedcomponentextraction.cpp
server/src/synthetize/: BackgroundReconstruction.cpp  DocumentXML.cpp  LoadLetter.cpp  OCR.cpp  Painter.cpp  StructureDetection.cpp  SynthetizeImage.cpp  synthetizeTest.cpp  textinpainting.cpp
server/src/util/: Config.cpp  Session.cpp  baseline.cpp  convertor.cpp  util.cpp
server/src/webPages/: GetSynthetizeImage.cpp  StartSession2.cpp  gestionSession.cpp  manualFontExtractor.cpp
